test/e2e/functional/albmesh-pingpong-stablecanary-rollout.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ping-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: alb-canary
---
apiVersion: v1
kind: Service
metadata:
  name: pong-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: alb-canary
---
---
apiVersion: v1
kind: Service
metadata:
  name: stable-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: alb-canary
---
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: alb-canary
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-canary-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              service:
                name: alb-rollout-root
                port:
                  name: use-annotation
            pathType: ImplementationSpecific
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: alb-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alb-canary
  template:
    metadata:
      labels:
        app: alb-canary
    spec:
      containers:
        - name: alb-canary
          image: "argoproj/rollouts-demo:red"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 16Mi
              cpu: 5m
  strategy:
    canary:
      scaleDownDelaySeconds: 2
      canaryService: canary-service
      stableService: stable-service
      pingPong:
        pingService: ping-service
        pongService: pong-service
      trafficRouting:
        alb:
          ingress: alb-canary-ingress
          rootService: alb-rollout-root
          servicePort: 80
        istio:
          virtualService:
            name: istio-host-split-vsvc
            routes:
              - primary
      steps:
        - setWeight: 25
        - pause: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-host-split-vsvc
spec:
  hosts:
    - istio-host-split
  http:
    - name: primary
      route:
        - destination:
            host: stable-service
          weight: 100
        - destination:
            host: canary-service
          weight: 0
